# front-end/src/api/pdfApi.js
@@ -10,4 +10,9 @@ export const pdfApi = {
             },
         });
     },
+
+    publish(id) {
+        const url = `pdf/upload-to-ipfs/${id}`;
+        return axiosClient.get(url);
+    }
 }
